# min8_cpu

./: .gitignore  README.md  min8_isa_v1_2.md  min8_isa_v1_3.md  min8_pro_isa_v0.md  pyproject.toml
docs/: assembler_aliases.md  isa_extension_preflight.md  min8_pro_assembler.md  peripheral_io_library.md  rtl_core_spec_v1.md  rtl_random_verifier.md  rtl_random_verifier_contract.md  rtl_test_framework.md  simulator_contract.md
examples/: audio_saw.asm  echo.asm  fib.asm  filo_stack.asm  ps2_scan_echo.asm  store_demo.asm  uart_echo.asm  ws2812_2x2_cycle.asm
fpga/xc7k70t_fib_led_demo/: README.md  build_bram_impl.tcl  (+6 more)
min8/: __init__.py  asm.py  cpu.py  disasm.py  exceptions.py  gui.py  host_audio.py  io.py  isa.py  session.py  uart_download.py
min8_pro/: __init__.py  asm.py  cpu.py  disasm.py  exceptions.py  gui.py  io.py  isa.py  session.py
min8_shared/: __init__.py  peripherals.py
rtl/: min8_alu.v  min8_bram_wrap.v  min8_core.v  min8_core_tb.v  min8_io_audio.v  min8_io_filo.v  min8_io_peripheral_chain.v  min8_io_ps2.v  min8_io_ws2812.v  min8_mem_model.v  min8_regfile.v  min8_sync_fifo.v  min8_uart_rx.v  min8_uart_tx.v
tests/: test_assembler.py  test_cpu.py  test_disasm.py  test_isa.py  test_peripherals.py  test_rtl_random_support.py  test_session.py  test_uart_download.py
tests_pro/: __init__.py  support.py  test_assembler.py  test_cpu.py  test_disasm.py  test_isa.py  test_peripherals.py  test_programs.py  test_session.py
tests_rtl/: test_rtl_lockstep.py  test_rtl_peripherals.py  test_rtl_random.py  test_rtl_smoke.py  test_verilator_runner.py
(+38 files in other folders)
