[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "min8"
version = "0.1.0"
description = "Reference simulator and tooling for the Min8 ISA"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
min8-asm = "min8.asm:main"
min8-gui = "min8.gui:main"

[tool.setuptools.packages.find]
include = ["min8*"]
