[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "min8"
version = "0.1.0"
description = "Reference simulator and tooling for the Min8 ISA"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
rtl = ["cocotb>=2,<3"]

[project.scripts]
min8-asm = "min8.asm:main"
min8-gui = "min8.gui:main"
min8-uart-download = "min8.uart_download:main"

[tool.setuptools.packages.find]
include = ["min8*"]
